--- a/style.css
+++ b/style.css
@@ -68,6 +68,23 @@ body {
   border-bottom: 1px solid #FF478B;
   transition: .2s ease-in-out;
 }
+
+
+/* video */
+.intro {
+  display: block;
+  
+}
+.video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+
+
 .home, .about {
   padding: 50px;
   /* height: 85%; */
@@ -89,6 +106,8 @@ body {
   color: #fff;
   margin: 0;
   z-index: 15;
+  padding: 20px;
+  background-color: #171d32b8;
 }
 .main__title {
   font-size: 40px;
@@ -104,7 +123,7 @@ body {
 /* } */
 
 .main__btn {
-  margin-top: 40px;
+  margin: 40px 0 16px;
   text-transform: uppercase;
   display: flex;
 }
@@ -128,6 +147,23 @@ body {
   transition: .5s ease-in-out;
   cursor: pointer;
 }
+
+/* =============== about ================= */
+.about {
+  display: flex;
+  justify-content: center;
+}
+
+.about__inner {
+  /* width: 80%; */
+  padding: 20px;
+  background-color: #171d32b8;
+}
+
+
+
+
+/* =============== portfoio ============= */
 .portfolio {
   padding: 0;
 }
@@ -180,6 +216,11 @@ h3.slide__text__title {
 
 /*//////////////////////////////////////////////////////////////////
 [ Contact ]*/
+.contact__inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .container-contact100 {
   width: 100%;  
@@ -194,6 +235,10 @@ h3.slide__text__title {
 
 /*//////////////////////////////////////////////////////////////////
 [ Contact ]*/
+
+.contact__form {
+  width: 100%;
+}
 
 .container-contact100 {
   width: 100%;  
@@ -212,9 +257,10 @@ h3.slide__text__title {
 
 .wrap-contact100 {
   max-width: 550px;
-  /* width: 100%; */
+  width: 100%;
   background: transparent;
-  padding: 60px 0 80px 0;
+  background-color: #171d32b8;
+  padding: 60px 20px 80px 20px;
   display: flex;
   justify-content: center;
 }
@@ -349,43 +395,7 @@ textarea.input100 {
   overflow: hidden;
 }
 
-/* .contact100-form-bgbtn {
-  position: absolute;
-  z-index: -1;
-  width: 300%;
-  height: 100%;
-  background: #df2351;
-  background: -webkit-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
-  background: -o-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
-  background: -moz-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
-  background: linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
-  top: 0;
-  left: -100%;
-
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-} */
-
 .contact100-form-btn {
-  /* display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  min-width: 160px;
-  height: 62px;
-
-  font-family: Oswald-Medium;
-  font-size: 16px;
-  color: #fff; */
-  /* line-height: 1.2; */
-
-
   background-color: transparent;
   border-radius: 25px;
   border: none;
@@ -405,15 +415,6 @@ textarea.input100 {
   transition: .5s ease-in-out;
   cursor: pointer;
 }
-
-
-/* .wrap-contact100-form-btn:hover .contact100-form-bgbtn {
-  left: 0;
-} */
-
-/*------------------------------------------------------------------
-[ Responsive ]*/
-
 
 
 /*------------------------------------------------------------------
@@ -485,12 +486,31 @@ textarea.input100 {
 
 
 
-@media(min-width: 321px) {
-  .contact100-form {
-    width: 100%;
+
+
+
+
+/* adaptive media */
+@media (max-width: 480px) {
+  .main__title {
+    font-size: 30px;
+  }
+  #menu {
+    padding: 15px 0;
+    justify-content: space-around;
+  }
+  .menu__item {
+    font-size: 16px;
+    padding: 0;
+  }
+
+  .main__btn .btn {
+    font-size: 11px;
+  }
+  .main__btn .btn a {
+    padding: 15px 20px;
   }
 }
-
 
 @media (max-width: 320px) {
   .input.input100 {
@@ -499,10 +519,24 @@ textarea.input100 {
   .textarea.input100 {
     min-height: 100px;
   }
-  .main__btn .btn {
-    font-size: 11px;
+  .main__btn {
+    justify-content: space-between;
+  }
+  .main__btn .btn:first-child {
+    margin-right: 0;
+  }
+  .menu__item {
+    font-size: 14px;
+    padding: 0;
   }
   .main__btn .btn a {
-    padding: 15px 20px;
+    padding: 15px;
   }
-} 
+
+
+  .about__inner {
+    width: 80%;
+    height: 445px;
+    overflow-x: scroll;
+  }
+}
