--- a/style.css
+++ b/style.css
@@ -71,17 +71,52 @@ body {
 
 
 /* video */
-.intro {
-  display: block;
-  
-}
-.video {
+#video {
   position: fixed;
-  top: 0;
+  top: 0; 
+  right: 0; 
+  bottom: 0; 
   left: 0;
-  max-height: 100vh;
   overflow: hidden;
 }
+#trailer > video {
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto; 
+  height: auto;
+}
+
+/* #video-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 1;
+  background: url("img/videoFon.jpg") no-repeat #94a233;
+  background-size: cover;
+}
+
+#video-bg > video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto;
+  height: auto; 
+}
+
+@supports (object-fit: cover) {
+   #video-bg > video {
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
+   }
+} */
 
 
 
@@ -223,14 +258,14 @@ h3.slide__text__title {
 }
 
 .container-contact100 {
-  width: 100%;  
+  width: 100%;
   /* min-height: 100vh; */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   /* background: #e6e6e6; */
-  
+
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -241,7 +276,7 @@ h3.slide__text__title {
 }
 
 .container-contact100 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -252,7 +287,7 @@ h3.slide__text__title {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  
+
 }
 
 .wrap-contact100 {
@@ -297,9 +332,8 @@ h3.slide__text__title {
 
 .input100 {
   display: block;
-  width: 99%;
+  width: 100%;
   background: transparent;
-  font-family: Oswald-Medium;
   font-size: 15px;
   color: #43383e;
   line-height: 1.2;
@@ -310,15 +344,17 @@ h3.slide__text__title {
 /*---------------------------------------------*/
 input.input100 {
   height: 50px;
-  /* padding: 0 20px 0 58px; */
+  padding: 5px;
   background-color: #fff;
+  box-sizing: border-box;
 }
 
 
 textarea.input100 {
   min-height: 150px;
-  /* padding: 19px 20px 0 23px; */
+  padding: 5px;
   background-color: #fff;
+  box-sizing: border-box;
 }
 
 
@@ -537,6 +573,6 @@ textarea.input100 {
   .about__inner {
     width: 80%;
     height: 445px;
-    overflow-x: scroll; 
+    overflow-x: scroll;
   }
 }
