--- a/style.css
+++ b/style.css
@@ -71,52 +71,21 @@ body {
 
 
 /* video */
-#video {
+#trailer {
   position: fixed;
   top: 0; 
   right: 0; 
   bottom: 0; 
   left: 0;
   overflow: hidden;
+  height: 100vh;
 }
-#trailer > video {
+#video {
   min-width: 100%; 
   min-height: 100%;
   width: auto; 
   height: auto;
 }
-
-/* #video-bg {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: 1;
-  background: url("img/videoFon.jpg") no-repeat #94a233;
-  background-size: cover;
-}
-
-#video-bg > video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  width: auto;
-  height: auto; 
-}
-
-@supports (object-fit: cover) {
-   #video-bg > video {
-       top: 0;
-       left: 0;
-       width: 100%;
-       height: 100%;
-       object-fit: cover;
-   }
-} */
 
 
 
